--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
        <body> 
         <h2>Deneme sayfası</h2> 
         Sizin sayenizde güzel işler başaracağıma inanıyorum Patika.dev ailesi :)
+           <img src="ilkrepo.jpg" alt="İlk Repo"/>
+
        </body>
     </head>
 </html>
